[package]
name = "greed_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.1"
termion = "1.5.6"
tui = "0.18.0"
clap = "3.1.6"
rand = "0.8.5"
lazy_static = "1.4.0"
thiserror = "1.0.31"
bitflags = "1.3.2"
num_enum = "0.5.7"
sha2 = "0.10.2"
rand_pcg = "0.3.1"
chrono = { version = "0.4.19", oldtime = false }
serde = { version = "1.0.137", features = ["derive"] }
json5 = "0.4.1"
