[package]
name = "greed_lib_rs"
version = "0.1.0"
edition = "2021"
authors = ["raldone01 <raldone01@gmail.com>", "onestacked <chrisi.schrefl@gmail.com>"]
description = "A rewrite of the very popular greed cli game. (Originally written by Matt Day) This crate contains just the engine."
repository = "https://github.com/raldone01/greed_rs"
license = "GPL-3.0 license"
keywords = ["game", "puzzle-game", "roleplay", "greed", "game-engine-2d"]
categories = ["game-engines", "games", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
thiserror = "1.0.31"
bitflags = "1.3.2"
bitvec = "1.0.0"
num_enum = "0.5.7"
sha2 = "0.10.2"
rand_pcg = "0.3.1"
chrono = { version = "0.4.19", oldtime = false }
serde = { version = "1.0.137", features = ["derive"] }
json5 = "0.4.1"
serde_with = "2.0.0"
arbitrary = "1.1.3"
