[package]
name = "greed_lib_rs"
version = "0.1.0"
edition = "2021"
authors = ["raldone01 <raldone01@gmail.com>", "onestacked <chrisi.schrefl@gmail.com>"]
description = "A rewrite of the very popular greed cli game. (Originally written by Matt Day) This crate contains just the engine."
repository = "https://github.com/raldone01/greed_rs"
license = "GPL-3.0 license"
keywords = ["game", "puzzle-game", "roleplay", "greed", "game-engine-2d"]
categories = ["game-engines", "games", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
thiserror-no-std = "2.0.2"
bitflags = "2.3.3"
bitvec = "1.0.1"
num_enum = "0.6.1"
sha2 = "0.10.7"
rand_pcg = "0.3.1"
chrono = { version = "0.4.26", default-features = false, features = ["alloc", "clock"] }
serde = { version = "1.0.169", features = ["derive"] }
serde_json = "1.0.100"
serde_with = "3.0.0"
arbitrary = "1.3.0"
