[package]
name = "greed_rs"
version = "0.1.0"
edition = "2021"
authors = ["raldone01 <raldone01@gmail.com>", "onestacked <chrisi.schrefl@gmail.com>"]
description = "A rewrite of the very popular greed cli game. (Originally written by Matt Day)"
repository = "https://github.com/raldone01/greed_rs"
license = "GPL-3.0 license"
keywords = ["game", "puzzle-game", "roleplay", "greed", "game-engine-2d"]
categories = ["game-engines", "games", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.24.0"
# termion = "1.5.6"
tui = "0.18.0"
clap = { version = "3.1.6", features = ["derive"] }
greed_lib_rs = { path = "../greed_lib_rs" }
