[package]
name = "greed_wasm_rs"
version = "0.1.0"
authors = ["onestacked <chrisi.schrefl@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

greed_lib_rs = { path = "../greed_lib_rs" }

# Explicit direct dependency in order to enable js support for random generation
getrandom = { version = "0.2.7", features = ["js"] }
# Explicit direct dependency in order to enable js support for getting the current time
chrono = { version = "0.4.19", features = ["wasmbind"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

# [profile.release] # TODO
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"
# strip = "symbols"
